@@ -1,5 +1,7 @@
 package com.troblecodings.signals.tileentitys;
 
+import java.util.stream.Collectors;
+
 import com.troblecodings.core.NBTWrapper;
 import com.troblecodings.guilib.ecs.interfaces.ISyncable;
 import com.troblecodings.signals.blocks.RedstoneIO;
@@ -10,9 +12,9 @@ import com.troblecodings.signals.core.RedstoneUpdatePacket;
 import com.troblecodings.signals.core.TileEntityInfo;
 import com.troblecodings.signals.handler.SignalBoxHandler;
 
-import net.minecraft.core.BlockPos;
-import net.minecraft.world.entity.player.Player;
-import net.minecraft.world.level.block.state.BlockState;
+import net.minecraft.block.BlockState;
+import net.minecraft.entity.player.PlayerEntity;
+import net.minecraft.util.math.BlockPos;
 
 public class RedstoneIOTileEntity extends SyncableTileEntity implements ISyncable {
 
@@ -33,8 +35,8 @@ public class RedstoneIOTileEntity extends SyncableTileEntity implements ISyncabl
 
     @Override
     public void saveWrapper(final NBTWrapper wrapper) {
-        wrapper.putList(LINKED_LIST,
-                linkedPositions.stream().map(NBTWrapper::getBlockPosWrapper).toList());
+        wrapper.putList(LINKED_LIST, linkedPositions.stream().map(NBTWrapper::getBlockPosWrapper)
+                .collect(Collectors.toList()));
     }
 
     @Override
@@ -91,7 +93,8 @@ public class RedstoneIOTileEntity extends SyncableTileEntity implements ISyncabl
     }
 
     @Override
-    public boolean isValid(final Player player) {
-        return true;
+    public boolean isValid(final PlayerEntity player) {
+        // TODO Auto-generated method stub
+        return false;
     }
 }
